@@ -5,7 +5,7 @@
 ~media-gfx/cls-themes-10.9 amd64 x86
 ~media-gfx/cld-themes-10.9 amd64 x86
 
-~sys-apps/calculate-1.4.0_p20100826 amd64 x86
+~sys-apps/calculate-1.4.0_p20100915 amd64 x86
 #~sys-apps/calculate-install-2.2.0.0_p20100826 amd64 x86
 ~app-misc/calculate-install-gui-2.2.0.0_p20100902 amd64 x86
 ~app-misc/calculate-install-gui-2.2.0.0_p20100910 amd64 x86
