@@ -1,4 +1,4 @@
-~sys-apps/calculate-1.4.0_p20100826 amd64 x86
+~sys-apps/calculate-1.4.0_p20100915 amd64 x86
 =sys-apps/calculate-server-9999 amd64 x86
 =sys-apps/calculate-lib-9999 amd64 x86
 
