@@ -1,6 +1,7 @@
 DIST calculate-1.3.12.tar.bz2 170338 RMD160 d2b4ebee602ac05d9752bd52335c3318db440638 SHA1 1d361bcb53efc73684dffcca972987354ae237f8 SHA256 34d073fcb977bfdc8e8e38354a5171a9db9dcb65ec00ade10bba7ae302968d8f
 EBUILD calculate-1.3.12.ebuild 1712 RMD160 f066b6db680402c8e148d78bed0157b523a006d0 SHA1 583da9f51beb3e96109e1cbc4a53932eea4b6417 SHA256 9fb996e422c9439a1c880bbc8373a39b317381d1dc21336e164ad07db48ff1e1
 EBUILD calculate-1.4.0_p20100826.ebuild 1618 RMD160 a7ef8f261d4ea637f9e78ce441bfbbd4038448d8 SHA1 03cfe05f384dbf2185168a6eb69849ea50c92f00 SHA256 7d40ca487582caa0a87999fab41468fde19a441ae44868662675e74c72f4b6fc
+EBUILD calculate-1.4.0_p20100915.ebuild 1618 RMD160 b948f97bbc982aef79842f02d091426875619061 SHA1 c7f0d3dd26d02e212ab23549344f78a91e2f0f67 SHA256 82109e6afaed49f43aee19382f277548d78cdc0c684eb475ac75b3a12d9beff1
 EBUILD calculate-9999.ebuild 1606 RMD160 2dfb7382650af0470f4db0bcbf5b73a4b0b90e97 SHA1 d00467849ddc18f7cb67082dc9ac2b55489e2067 SHA256 a1546b9a24820ede098ad0dbd5230f7a2bce3f3c95a6135cc6af7f086eee2f9e
-MISC ChangeLog 2254 RMD160 340b6b0990c5381b1a6dfd12f4d9f3982ee28b4f SHA1 037be0ed1ad16538dd547bec1e3c88555d599c43 SHA256 c7cfdec6aae9ef7e23ecf9afa345acbd0b95180192737d2311b6c6e7163d0094
+MISC ChangeLog 2414 RMD160 07ab1a97095bc798a76a9961eb1a489b58f7f630 SHA1 b513025f1860e5b851d2f570f90ae910356615c2 SHA256 b3b15e13987592aae0be10e6105bd35ac6ee5ee26da09b957e34aebf04848ffc
 MISC metadata.xml 301 RMD160 2b89953e755d47fdc10f6def8e9d30975ed5aba1 SHA1 fa349945c077ca3d0fd95693f04a60f2da15f467 SHA256 074eff7c846f7fc8f0e74e0d992bdda9432164f28c0f3cf8991a1e59aac38700
