@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-1.4.0_p20100915 (15 Sep 2010)
+
+  15 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +calculate-1.4.0_p20100915.ebuild:
+  daily update
+
 *calculate-1.4.0_p20100826 (26 Aug 2010)
 
   26 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
